# story-clustering

./: .containerignore  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  Containerfile  README.md  app.py  build_container.sh  clustered_stories_list.json  openapi3_1.yml  pyproject.toml  requirements.txt  story_list.json  tox.ini
.github/workflows/: build.yml  build_and_merge.yml  release.yml  smoke_test.yml  test.yml
docker/: compose.e2e.yml  compose.yml
notebook/: test_story_clustering.ipynb
notebook/incremental_clustering/: get_additional_data.ipynb  group_clusters.ipynb  grouping.py
story_clustering/: __init__.py  __main__.py  clustering.py  config.py  decorators.py  document_representation.py  event_organizer.py  eventdetector.py  gte.py  keywords_organizer.py  log.py  louvain.py  nlp_utils.py  predictor.py  predictor_factory.py  router.py  story_maker.py  structure_compare.py
story_clustering/notebook/: test_story_clustering.ipynb
story_clustering/tests/: clustered_news_item_list.json  news_item_list.json  test_clustering.py  testdata.py
tests/: clustered_stories_list.json  conftest.py  test_containerfile.py  test_function.py  test_offline_startup.py
