[project]
name = "taranis_story_clustering"
description = "Story Clustering Bot for Taranis-NG"
readme = "README.md"
license = {file = "LICENSE.md"}
maintainers = [{ name = "AIT", email = "benjamin.akhras@ait.ac.at" }]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]
requires-python = ">=3.9"
dependencies = [
    "sentence_transformers",
    "transformers",
    "typing_extensions",
    "torch",
    "nltk",
    "numpy",
    "networkx",
    "polyfuzz",
    "pytest"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["black", "pytest"]

[project.urls]
"Source Code" = "https://github.com/ait-cs-IaaS/story-clustering"

[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools]
packages = ["story_clustering"]

[tool.black]
line-length = "142"
target-version = ["py311"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*_app_ctx_stack.*:DeprecationWarning",
    "ignore::DeprecationWarning"
]
